fixed the design on mobile view, toast on item added

--- a/src/app/components/cart-item/cart-item.component.css
+++ b/src/app/components/cart-item/cart-item.component.css
@@ -1,6 +1,6 @@
 .cart-item {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
   padding: 5px;
   border: 1px solid darkcyan;
