--- a/src/app/components/product-page/product-page.component.css
+++ b/src/app/components/product-page/product-page.component.css
@@ -4,7 +4,7 @@
 
 .image-and-desc {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
 }
 
